# priest-rs

./: Cargo.toml  DEVLOG.md  README.md
src/: context_builder.rs  engine.rs  errors.rs  lib.rs
src/profile/: default_profile.rs  filesystem_loader.rs  loader.rs  mod.rs  model.rs
src/providers/: adapter.rs  anthropic.rs  mod.rs  ollama.rs  openai_compat.rs
src/schema/: config.rs  request.rs  response.rs
src/session/: in_memory.rs  mod.rs  model.rs  sqlite.rs  store.rs
tests/: context_builder.rs  engine.rs  mock_adapter.rs  profile_loader.rs  session_store.rs  streaming.rs
