[package]
name        = "priest"
version     = "2.2.0"
edition     = "2021"
description = "Rust SDK for the priest protocol (spec v2.0.0)"
license     = "MIT"
repository  = "https://github.com/tjcccc/priest-rs"
homepage    = "https://github.com/tjcccc/priest-rs"
readme      = "README.md"
keywords    = ["ai", "llm", "anthropic", "ollama", "openai"]
categories  = ["api-bindings", "asynchronous"]

[dependencies]
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
rusqlite    = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }
base64      = "0.22"
futures     = "0.3"
bytes       = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile   = "3"
filetime   = "0.2"
